[TIM-662] Determine the facet values via GraphTraversal.